tercer commit con modificaciones en MyApp2

--- a/MyApp2/app/src/main/res/layout/activity_main.xml
+++ b/MyApp2/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_marginStart="28dp"
         android:layout_marginLeft="28dp"
         android:layout_marginTop="40dp"
-        android:text="Estatus del Alumno"
+        android:text="@string/txt_view_String"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:textSize="24sp" />
@@ -26,7 +26,7 @@
         android:layout_marginLeft="28dp"
         android:layout_marginTop="56dp"
         android:ems="10"
-        android:hint="Ingrese su primer nota"
+        android:hint="@string/txt_nota1_string"
         android:inputType="number"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -40,7 +40,7 @@
         android:layout_marginLeft="28dp"
         android:layout_marginTop="64dp"
         android:ems="10"
-        android:hint="Ingrese segunda nota"
+        android:hint="@string/txt_nota2_string"
         android:inputType="number"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -54,7 +54,7 @@
         android:layout_marginLeft="28dp"
         android:layout_marginTop="56dp"
         android:ems="10"
-        android:hint="Ingrese su tercer nota"
+        android:hint="@string/txt_nota3_string"
         android:inputType="number"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -68,7 +68,7 @@
         android:layout_marginLeft="28dp"
         android:layout_marginTop="44dp"
         android:onClick="estatus"
-        android:text="Evaluar"
+        android:text="@string/button"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_nota3" />
