--- a/App_RadioButton/app/src/main/res/layout/activity_main.xml
+++ b/App_RadioButton/app/src/main/res/layout/activity_main.xml
@@ -59,6 +59,22 @@
             android:layout_weight="1"
             android:text="@string/rb_res"
             android:textSize="24sp" />
+
+        <RadioButton
+            android:id="@+id/rb_multiplicar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/rb_mult"
+            android:textSize="24sp" />
+
+        <RadioButton
+            android:id="@+id/rb_dividir"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/rb_div"
+            android:textSize="24sp" />
     </RadioGroup>
 
     <Button
