--- a/App_MenuOverFlow/app/src/main/res/menu/overflow.xml
+++ b/App_MenuOverFlow/app/src/main/res/menu/overflow.xml
@@ -3,8 +3,19 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/compartir"
+        android:icon="@drawable/compartir"
+        android:title="@string/compartir"
+        app:showAsAction="always" />
+    <item
         android:id="@+id/Item1"
-        android:title="@string/item1" />
+        android:title="@string/item1"
+        app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/buscar"
+        android:icon="@drawable/buscar"
+        android:title="@string/buscar"
+        app:showAsAction="always" />
     <item
         android:id="@+id/Item2"
         android:title="@string/item2" />
