nivel1+base de datos

--- a/Frutiapp/app/src/main/res/layout/activity_nivel1.xml
+++ b/Frutiapp/app/src/main/res/layout/activity_nivel1.xml
@@ -65,6 +65,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="128dp"
+        android:contentDescription="@string/app_name"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/cero" />
@@ -104,6 +105,7 @@
         android:layout_marginTop="275dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
+        android:contentDescription="@string/app_name"
         android:ems="10"
         android:hint="@string/et_respuesta"
         android:inputType="number"
@@ -118,6 +120,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:background="@drawable/fondoboton"
+        android:onClick="Comprobar"
         android:text="@string/boton_sumar"
         android:textColor="@android:color/white"
         app:layout_constraintEnd_toEndOf="parent"
